# vasco-12

./: .gitignore  .polyscope.ini  CMakeLists.txt  GeneralMesh.cpp  GeneralMesh.h  HybridManufacturing.cpp  HybridManufacturing.h  Mygraph.cpp  Mygraph.h  PolygonIntersection.h  config.ini  data.cpp  data.h  debug.h  edge.h  exportobj.cpp  gcode.cpp  helpers.h  imgui.ini  importstl.cpp  input_files.ini  katana.cpp  katana.h  launch.vs.json  layer_graph.cpp  layer_graph.h  main.cpp  polygon.cpp  polygon.h  resource.h  sample_on_ball.cpp  sample_on_ball.h  stl2obj.cpp  to_main.h  vasco-12.cpp  vasco-12.h  visual.cpp  visual.h
katana/: config.cpp  gcode.cpp  gcode.h  slicer.cpp  stl.h
stashed_code/: patch2.cpp
vasco/: Slicer.h  Visualization.cpp  Visualization.h  generateClosedTube.cpp  generateClosedTube.h
vasco/core/: CgalUtils.h  Constants.h  GeometryUtils.cpp  GeometryUtils.h  GraphUtils.cpp  GraphUtils.h  ObjIO.h  Types.h  VascoUtils.cpp  VascoUtils.h  Voronoi.cpp  Voronoi.h
